--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap');
 
 html,
 body {
@@ -45,4 +45,4 @@ ul>li>a {
     text-decoration: none;
     color: #3668ad;
     font-weight: bold;
-}
+} */
